src/Grammar/Grammars/VaibikParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from VaibikParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
public partial class VaibikParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		POEHALI=1, FINALOCHKA=2, PROKRASTINIRUEM=3, DRATUTI=4, VBROS=5, VYBROS=6, 
		PACHKA=7, CITATA_TYPE=8, RASKLAD=9, POLTORASHKA=10, CIFERKA=11, PSHIK=12, 
		BAZA=13, HAIP=14, KRINZH=15, HVATIT=16, ESLI=17, TO=18, INACHE=19, CIKL=20, 
		I=21, ILI=22, NE=23, PI=24, ESHKA=25, POYASNITELNAYA_BRIGADA=26, FINALOCHKA_KOMMENTARIYA=27, 
		MODUL=28, MINIMUM=29, MAXIMUM=30, SINUS=31, KOSINUS=32, TANGENS=33, PLUS=34, 
		MINUS=35, MULT=36, DIV=37, MOD=38, EQ=39, NEQ=40, LT=41, GT=42, LTE=43, 
		GTE=44, ASSIGN=45, SEMI=46, COMMA=47, DOT=48, LPAREN=49, RPAREN=50, LBRACE=51, 
		RBRACE=52, LBRACK=53, RBRACK=54, COLON=55, ID=56, INTEGER=57, REAL=58, 
		STRING=59, WS=60, COMMENT=61, SINGLE_LINE_COMMENT=62;
	public const int
		RULE_program = 0, RULE_topLevelItem = 1, RULE_functionDeclaration = 2, 
		RULE_procedureDeclaration = 3, RULE_parameterList = 4, RULE_parameter = 5, 
		RULE_fullType = 6, RULE_typeName = 7, RULE_arrayType = 8, RULE_globalVariableDeclaration = 9, 
		RULE_variableDeclaration = 10, RULE_block = 11, RULE_statementList = 12, 
		RULE_statement = 13, RULE_expressionStatement = 14, RULE_arrayAssignmentStatement = 15, 
		RULE_sideEffectStatement = 16, RULE_ifStatement = 17, RULE_loopStatement = 18, 
		RULE_loopControl = 19, RULE_assignmentExpr = 20, RULE_returnStatement = 21, 
		RULE_breakStatement = 22, RULE_ioStatement = 23, RULE_inputList = 24, 
		RULE_expression = 25, RULE_assignmentExpression = 26, RULE_logicalOrExpression = 27, 
		RULE_logicalAndExpression = 28, RULE_equalityExpression = 29, RULE_relationalExpression = 30, 
		RULE_additiveExpression = 31, RULE_multiplicativeExpression = 32, RULE_unaryExpression = 33, 
		RULE_primary = 34, RULE_arrayAccess = 35, RULE_functionCall = 36, RULE_builtinFunctionCall = 37, 
		RULE_argumentList = 38, RULE_literal = 39, RULE_logicalLiteral = 40, RULE_constant = 41;
	public static readonly string[] ruleNames = {
		"program", "topLevelItem", "functionDeclaration", "procedureDeclaration", 
		"parameterList", "parameter", "fullType", "typeName", "arrayType", "globalVariableDeclaration", 
		"variableDeclaration", "block", "statementList", "statement", "expressionStatement", 
		"arrayAssignmentStatement", "sideEffectStatement", "ifStatement", "loopStatement", 
		"loopControl", "assignmentExpr", "returnStatement", "breakStatement", 
		"ioStatement", "inputList", "expression", "assignmentExpression", "logicalOrExpression", 
		"logicalAndExpression", "equalityExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "primary", 
		"arrayAccess", "functionCall", "builtinFunctionCall", "argumentList", 
		"literal", "logicalLiteral", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\\u041F\\u041E\\u0415\\u0425\\u0410\\u041B\\u0418'", "'\\u0424\\u0418\\u041D\\u0410\\u041B\\u041E\\u0427\\u041A\\u0410'", 
		"'\\u041F\\u0420\\u041E\\u041A\\u0420\\u0410\\u0421\\u0422\\u0418\\u041D\\u0418\\u0420\\u0423\\u0415\\u041C'", 
		"'\\u0414\\u0420\\u0410\\u0422\\u0423\\u0422\\u0418'", "'\\u0412\\u0411\\u0420\\u041E\\u0421'", 
		"'\\u0412\\u042B\\u0411\\u0420\\u041E\\u0421'", "'\\u041F\\u0410\\u0427\\u041A\\u0410'", 
		"'\\u0426\\u0418\\u0422\\u0410\\u0422\\u0410'", "'\\u0420\\u0410\\u0421\\u041A\\u041B\\u0410\\u0414'", 
		"'\\u041F\\u041E\\u041B\\u0422\\u041E\\u0420\\u0410\\u0428\\u041A\\u0410'", 
		"'\\u0426\\u0418\\u0424\\u0415\\u0420\\u041A\\u0410'", "'\\u041F\\u0428\\u0418\\u041A'", 
		"'\\u0411\\u0410\\u0417\\u0410'", "'\\u0425\\u0410\\u0419\\u041F'", "'\\u041A\\u0420\\u0418\\u041D\\u0416'", 
		"'\\u0425\\u0412\\u0410\\u0422\\u0418\\u0422'", "'\\u0415\\u0421\\u041B\\u0418'", 
		"'\\u0422\\u041E'", "'\\u0418\\u041D\\u0410\\u0427\\u0415'", "'\\u0426\\u0418\\u041A\\u041B'", 
		"'\\u0418'", "'\\u0418\\u041B\\u0418'", "'\\u041D\\u0415'", "'\\u041F\\u0418'", 
		"'\\u0415\\u0428\\u041A\\u0410'", "'(\\u041F\\u041E\\u042F\\u0421\\u041D\\u0418\\u0422\\u0415\\u041B\\u042C\\u041D\\u0410\\u042F-\\u0411\\u0420\\u0418\\u0413\\u0410\\u0414\\u0410:'", 
		"'\\u0424\\u0418\\u041D\\u0410\\u041B\\u041E\\u0427\\u041A\\u0410-\\u041A\\u041E\\u041C\\u041C\\u0415\\u041D\\u0422\\u0410\\u0420\\u0418\\u042F)'", 
		"'\\u041C\\u041E\\u0414\\u0423\\u041B\\u042C'", "'\\u041C\\u0418\\u041D\\u0418\\u041C\\u0423\\u041C'", 
		"'\\u041C\\u0410\\u041A\\u0421\\u0418\\u041C\\u0423\\u041C'", "'\\u0421\\u0418\\u041D\\u0423\\u0421'", 
		"'\\u041A\\u041E\\u0421\\u0418\\u041D\\u0423\\u0421'", "'\\u0422\\u0410\\u041D\\u0413\\u0415\\u041D\\u0421'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'='", "';'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "POEHALI", "FINALOCHKA", "PROKRASTINIRUEM", "DRATUTI", "VBROS", 
		"VYBROS", "PACHKA", "CITATA_TYPE", "RASKLAD", "POLTORASHKA", "CIFERKA", 
		"PSHIK", "BAZA", "HAIP", "KRINZH", "HVATIT", "ESLI", "TO", "INACHE", "CIKL", 
		"I", "ILI", "NE", "PI", "ESHKA", "POYASNITELNAYA_BRIGADA", "FINALOCHKA_KOMMENTARIYA", 
		"MODUL", "MINIMUM", "MAXIMUM", "SINUS", "KOSINUS", "TANGENS", "PLUS", 
		"MINUS", "MULT", "DIV", "MOD", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", 
		"ASSIGN", "SEMI", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACK", "RBRACK", "COLON", "ID", "INTEGER", "REAL", "STRING", "WS", 
		"COMMENT", "SINGLE_LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VaibikParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static VaibikParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public VaibikParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public VaibikParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(VaibikParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelItemContext[] topLevelItem() {
			return GetRuleContexts<TopLevelItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelItemContext topLevelItem(int i) {
			return GetRuleContext<TopLevelItemContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16264L) != 0)) {
				{
				{
				State = 84;
				topLevelItem();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureDeclarationContext procedureDeclaration() {
			return GetRuleContext<ProcedureDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalVariableDeclarationContext globalVariableDeclaration() {
			return GetRuleContext<GlobalVariableDeclarationContext>(0);
		}
		public TopLevelItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterTopLevelItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitTopLevelItem(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelItemContext topLevelItem() {
		TopLevelItemContext _localctx = new TopLevelItemContext(Context, State);
		EnterRule(_localctx, 2, RULE_topLevelItem);
		try {
			State = 95;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				functionDeclaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				procedureDeclaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94;
				globalVariableDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(VaibikParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(VaibikParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(VaibikParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			typeName();
			State = 98;
			Match(ID);
			State = 99;
			Match(LPAREN);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 100;
				parameterList();
				}
			}

			State = 103;
			Match(RPAREN);
			State = 104;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcedureDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROKRASTINIRUEM() { return GetToken(VaibikParser.PROKRASTINIRUEM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(VaibikParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(VaibikParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(VaibikParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public ProcedureDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedureDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterProcedureDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitProcedureDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public ProcedureDeclarationContext procedureDeclaration() {
		ProcedureDeclarationContext _localctx = new ProcedureDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_procedureDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(PROKRASTINIRUEM);
			State = 107;
			Match(ID);
			State = 108;
			Match(LPAREN);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 109;
				parameterList();
				}
			}

			State = 112;
			Match(RPAREN);
			State = 113;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(VaibikParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(VaibikParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameterList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterParameterList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitParameterList(this);
		}
	}

	[RuleVersion(0)]
	public ParameterListContext parameterList() {
		ParameterListContext _localctx = new ParameterListContext(Context, State);
		EnterRule(_localctx, 8, RULE_parameterList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			parameter();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 116;
				Match(COMMA);
				State = 117;
				parameter();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(VaibikParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(VaibikParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FullTypeContext fullType() {
			return GetRuleContext<FullTypeContext>(0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterParameter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitParameter(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(Context, State);
		EnterRule(_localctx, 10, RULE_parameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(ID);
			State = 124;
			Match(COLON);
			State = 125;
			fullType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FullTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrayTypeContext arrayType() {
			return GetRuleContext<ArrayTypeContext>(0);
		}
		public FullTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fullType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterFullType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitFullType(this);
		}
	}

	[RuleVersion(0)]
	public FullTypeContext fullType() {
		FullTypeContext _localctx = new FullTypeContext(Context, State);
		EnterRule(_localctx, 12, RULE_fullType);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CITATA_TYPE:
			case RASKLAD:
			case POLTORASHKA:
			case CIFERKA:
			case PSHIK:
				EnterOuterAlt(_localctx, 1);
				{
				State = 127;
				typeName();
				}
				break;
			case PACHKA:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128;
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CIFERKA() { return GetToken(VaibikParser.CIFERKA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POLTORASHKA() { return GetToken(VaibikParser.POLTORASHKA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CITATA_TYPE() { return GetToken(VaibikParser.CITATA_TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RASKLAD() { return GetToken(VaibikParser.RASKLAD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PSHIK() { return GetToken(VaibikParser.PSHIK, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterTypeName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitTypeName(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 14, RULE_typeName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7936L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACHKA() { return GetToken(VaibikParser.PACHKA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK() { return GetToken(VaibikParser.LBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK() { return GetToken(VaibikParser.RBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.EnterArrayType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVaibikParserListener typedListener = listener as IVaibikParserListener;
			if (typedListener != null) typedListener.ExitArrayType(this);
		}
	}

	[RuleVersion(0)]
	public ArrayTypeContext arrayType() {
		ArrayTypeContext _localctx = new ArrayTypeContext(Context, State);
		EnterRule(_localctx, 16, RULE_arrayType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			Match(PACHKA);
			State = 134;
			Match(LBRACK);
			State = 135;
			expression();
			State = 136;
			Match(RBRACK);
			State = 137;
			typeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
